
[package]
name = "nexcore-id"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Zero-dependency UUID implementation for NexVigilant Core ecosystem"
license = "MIT"
repository = "https://github.com/nexvigilant/nexcore"
keywords = ["uuid", "id", "identifier", "no-std"]
categories = ["no-std", "data-structures"]

[dependencies]
# Zero external dependencies by default - supply chain sovereignty
# Optional serde support for JSON/TOML serialization
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
uuid = { version = "1.0", features = ["v4", "v7"] }

[[bench]]
name = "uuid_comparison"
harness = false

[lints]
workspace = true
